// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignNode campaign without description 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": null,
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-success text-uppercase w-100"
    >
      Open
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="text-muted test-campaign-namespace-link"
          to="/users/alice/campaigns"
        >
          <a
            className="text-muted test-campaign-namespace-link"
            href="/users/alice/campaigns"
          >
            alice
          </a>
        </AnchorLink>
        <span
          className="text-muted d-inline-block mx-1"
        >
          /
        </span>
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate text-muted font-italic"
      dangerousInnerHTML="No description"
      history="[History]"
    >
      <div
        className="text-truncate text-muted font-italic markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "No description",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z"
          />
        </svg>
      </Memo(SourceMergeIcon)>
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode closed campaign 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": "2019-12-04T23:19:01Z",
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-danger text-uppercase w-100"
    >
      Closed
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="text-muted test-campaign-namespace-link"
          to="/users/alice/campaigns"
        >
          <a
            className="text-muted test-campaign-namespace-link"
            href="/users/alice/campaigns"
          >
            alice
          </a>
        </AnchorLink>
        <span
          className="text-muted d-inline-block mx-1"
        >
          /
        </span>
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z"
          />
        </svg>
      </Memo(SourceMergeIcon)>
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode open campaign 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-success text-uppercase w-100"
    >
      Open
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="text-muted test-campaign-namespace-link"
          to="/users/alice/campaigns"
        >
          <a
            className="text-muted test-campaign-namespace-link"
            href="/users/alice/campaigns"
          >
            alice
          </a>
        </AnchorLink>
        <span
          className="text-muted d-inline-block mx-1"
        >
          /
        </span>
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z"
          />
        </svg>
      </Memo(SourceMergeIcon)>
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode open campaign on user page 1`] = `
<CampaignNode
  displayNamespace={false}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-success text-uppercase w-100"
    >
      Open
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M6,3A3,3 0 0,1 9,6C9,7.31 8.17,8.42 7,8.83V15.17C8.17,15.58 9,16.69 9,18A3,3 0 0,1 6,21A3,3 0 0,1 3,18C3,16.69 3.83,15.58 5,15.17V8.83C3.83,8.42 3,7.31 3,6A3,3 0 0,1 6,3M6,5A1,1 0 0,0 5,6A1,1 0 0,0 6,7A1,1 0 0,0 7,6A1,1 0 0,0 6,5M6,17A1,1 0 0,0 5,18A1,1 0 0,0 6,19A1,1 0 0,0 7,18A1,1 0 0,0 6,17M21,18A3,3 0 0,1 18,21A3,3 0 0,1 15,18C15,16.69 15.83,15.58 17,15.17V7H15V10.25L10.75,6L15,1.75V5H17A2,2 0 0,1 19,7V15.17C20.17,15.58 21,16.69 21,18M18,17A1,1 0 0,0 17,18A1,1 0 0,0 18,19A1,1 0 0,0 19,18A1,1 0 0,0 18,17Z"
          />
        </svg>
      </Memo(SourcePullIcon)>
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon)>
        <svg
          className="mdi-icon "
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z"
          />
        </svg>
      </Memo(SourceMergeIcon)>
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;
